# Feather-Flow

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  Dockerfile.release.dockerignore  HOW_FEATHERFLOW_WORKS.md  Makefile  PLAN.md  README.md  RUST_CODE_REVIEW.md  featherflow-spec.md  install.sh  plan.md  test.duckdb
.cargo/: config.toml
crates/ff-analysis/: Cargo.toml
crates/ff-analysis/src/: context.rs  error.rs  lib.rs  schema.rs  schema_test.rs  test_utils.rs  types.rs  types_test.rs
crates/ff-analysis/src/datafusion_bridge/: functions.rs  lineage.rs  lineage_test.rs  mod.rs  planner.rs  planner_test.rs  propagation.rs  propagation_test.rs  provider.rs  provider_test.rs  types.rs  types_test.rs
crates/ff-analysis/src/ir/: expr.rs  mod.rs  relop.rs  schema.rs  schema_test.rs  types.rs  types_test.rs
crates/ff-analysis/src/lowering/: expr.rs  expr_test.rs  join.rs  lowering_test.rs  mod.rs  query.rs  select.rs
crates/ff-analysis/src/pass/: expr_utils.rs  join_keys.rs  join_keys_test.rs  mod.rs  nullability.rs  nullability_test.rs  plan_cross_model.rs  plan_cross_model_test.rs  plan_description_drift.rs  plan_join_keys.rs  plan_nullability.rs  plan_pass.rs  plan_type_inference.rs  plan_unused_columns.rs  severity_override_test.rs  type_inference.rs  type_inference_test.rs  unused_columns.rs  unused_columns_test.rs
crates/ff-analysis/tests/: dag_scenario_tests.rs  duckdb_compat_tests.rs  edge_case_tests.rs
crates/ff-cli/: Cargo.toml
crates/ff-cli/src/: cli.rs  cli_test.rs  context.rs  main.rs
crates/ff-cli/src/commands/: analyze.rs  build.rs  clean.rs  clean_test.rs  common.rs  compile.rs  deploy.rs  diff.rs  docs.rs  dt.rs  fmt.rs  format_helpers.rs  format_helpers_test.rs  freshness.rs  freshness_test.rs  function.rs  init.rs  lineage.rs  ls.rs  meta.rs  metric.rs  mod.rs  parse.rs  rules.rs  run.rs  run_macro.rs  run_operation.rs  seed.rs  snapshot.rs  source.rs  test.rs  validate.rs  validate_test.rs  validation.rs  validation_test.rs
crates/ff-cli/src/commands/docs/: data.rs  generate.rs  mod.rs  serve.rs
crates/ff-cli/src/commands/run/: compile.rs  execute.rs  execute_test.rs  hooks.rs  incremental.rs  mod.rs  python.rs  state.rs
crates/ff-cli/static/: index.html
crates/ff-cli/static/css/: style.css
crates/ff-cli/static/js/: app.js  graph.js
crates/ff-cli/tests/: function_tests.rs  harness_expansion_tests.rs  integration_tests.rs  jinja_integration_tests.rs  memory_bench.rs  sa_integration_tests.rs
crates/ff-cli/tests/fixtures/dual_path_project/: featherflow.yml
crates/ff-cli/tests/fixtures/empty_project/: featherflow.yml
crates/ff-cli/tests/fixtures/fmt_project/: featherflow.yml
crates/ff-cli/tests/fixtures/hook_compilation_project/: featherflow.yml
crates/ff-cli/tests/fixtures/jinja_error_project/: featherflow.yml
crates/ff-cli/tests/fixtures/jinja_template_project/: featherflow.yml
crates/ff-cli/tests/fixtures/large_dag_project/: featherflow.yml
crates/ff-cli/tests/fixtures/mixed_nodes_project/: featherflow.yml
crates/ff-cli/tests/fixtures/node_paths_project/: featherflow.yml
crates/ff-cli/tests/fixtures/python_model_project/: featherflow.yml
crates/ff-cli/tests/fixtures/run_groups_project/: featherflow.yml
crates/ff-cli/tests/fixtures/sa_bridge_fail_unknown_table/: featherflow.yml
crates/ff-cli/tests/fixtures/sa_bridge_pass_basic_sql/: featherflow.yml
crates/ff-cli/tests/fixtures/sa_clean_project/: featherflow.yml
crates/ff-cli/tests/fixtures/sa_dag_fail_mixed/: featherflow.yml
crates/ff-cli/tests/fixtures/sa_dag_pass_ecommerce/: featherflow.yml
crates/ff-cli/tests/fixtures/sa_diagnostic_project/: featherflow.yml
crates/ff-cli/tests/fixtures/sa_duckdb_pass_agg_functions/: featherflow.yml
crates/ff-cli/tests/fixtures/sa_duckdb_pass_all_types/: featherflow.yml
crates/ff-cli/tests/fixtures/sa_duckdb_pass_scalar_functions/: featherflow.yml
crates/ff-cli/tests/fixtures/sa_duckdb_pass_syntax/: featherflow.yml
crates/ff-cli/tests/fixtures/sa_edge_pass_deep_expression/: featherflow.yml
crates/ff-core/: Cargo.toml
crates/ff-core/src/: breaking_changes.rs  breaking_changes_test.rs  checksum.rs  classification.rs  classification_test.rs  config.rs  config_test.rs  contract.rs  contract_test.rs  dag.rs  dag_test.rs  error.rs  exposure.rs  exposure_test.rs  function.rs  function_name.rs  function_name_test.rs  function_test.rs  lib.rs  manifest.rs  manifest_test.rs  metric.rs  model.rs  model_name.rs  model_name_test.rs  newtype_string.rs  node.rs  node_test.rs  project.rs  query_comment.rs  query_comment_test.rs  reference_manifest.rs  rules.rs  rules_test.rs  run_state.rs  run_state_test.rs  schema_registry.rs  seed.rs  seed_name.rs  seed_test.rs  (+15 more)
crates/ff-core/src/model/: freshness.rs  freshness_test.rs  mod.rs  model_test.rs  schema.rs  schema_test.rs  testing.rs  testing_test.rs
crates/ff-core/src/project/: loading.rs  mod.rs  project_test.rs  versioning.rs
crates/ff-db/: Cargo.toml
crates/ff-db/src/: duckdb.rs  duckdb_test.rs  error.rs  lib.rs  snowflake.rs  traits.rs
crates/ff-jinja/: Cargo.toml
crates/ff-jinja/src/: builtins.rs  builtins_test.rs  context.rs  custom_tests.rs  custom_tests_test.rs  environment.rs  environment_test.rs  error.rs  functions.rs  functions_test.rs  lib.rs
crates/ff-meta/: Cargo.toml
crates/ff-meta/src/: connection.rs  connection_test.rs  error.rs  lib.rs  manifest.rs  manifest_test.rs  migration.rs  row_helpers.rs  rules.rs  rules_test.rs
crates/ff-meta/src/ddl/: mod.rs  v001_initial.sql  v002_effective_classification.sql  v003_description_ai_generated.sql
crates/ff-meta/src/populate/: analysis.rs  compilation.rs  execution.rs  functions.rs  lifecycle.rs  mod.rs  models.rs  populate_test.rs  project.rs  seeds.rs  sources.rs  tests.rs
crates/ff-meta/src/query/: adhoc.rs  adhoc_test.rs  mod.rs  state.rs  state_test.rs
crates/ff-meta/tests/: meta_integration_tests.rs
crates/ff-test/: Cargo.toml
crates/ff-test/src/: generator.rs  generator_test.rs  lib.rs  runner.rs  runner_test.rs
docs/: DOCS_SITE.md  (+23 more)
(+639 files in other folders)
