[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/datastx/featherflow"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Templating
minijinja = { version = "2.0", features = ["loader"] }

# SQL parsing
sqlparser = { version = "0.52", features = ["visitor"] }

# Database
duckdb = { version = "1.1", features = ["bundled"] }

# Async
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"

# Utilities
petgraph = "0.6"
chrono = { version = "0.4", features = ["serde"] }
