[package]
name = "ff-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ff-core = { path = "../ff-core" }
ff-sql = { path = "../ff-sql" }

thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlparser.workspace = true
