[package]
name = "ff-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ff-core = { path = "../ff-core" }
ff-sql = { path = "../ff-sql" }

log.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
sqlparser.workspace = true
