[package]
name = "ff-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Featherflow CLI - a dbt-like tool for SQL templating and execution"

[[bin]]
name = "ff"
path = "src/main.rs"

[features]
default = ["docs-serve"]
docs-serve = ["dep:axum", "dep:tower-http", "dep:rust-embed", "dep:mime_guess", "dep:open"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures = "0.3"
indicatif = "0.18"
log.workspace = true
minijinja.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true

# docs-serve (optional)
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
open = { version = "5", optional = true }

ff-core = { path = "../ff-core" }
ff-sql = { path = "../ff-sql" }
ff-jinja = { path = "../ff-jinja" }
ff-db = { path = "../ff-db" }
ff-test = { path = "../ff-test" }
ff-analysis = { path = "../ff-analysis" }
ff-meta = { path = "../ff-meta" }

[dev-dependencies]
tempfile = "3.10"
