[package]
name = "ff-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Database abstraction layer for Featherflow - traits and DuckDB implementation"

[dependencies]
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
duckdb.workspace = true

[dev-dependencies]
tempfile = "3.10"
