[package]
name = "ff-meta"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Meta database (DuckDB) for Featherflow - schema, population, and rules engine"

[dependencies]
chrono.workspace = true
duckdb.workspace = true
ff-core = { path = "../ff-core" }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.10"
