[package]
name = "ff-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test generation for Featherflow - schema test SQL generation and execution"

[dependencies]
thiserror.workspace = true
ff-core = { path = "../ff-core" }
ff-db = { path = "../ff-db" }
ff-jinja = { path = "../ff-jinja" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
