[package]
name = "ff-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test generation for Featherflow - schema test SQL generation and execution"

[dependencies]
ff-core = { path = "../ff-core" }
ff-db = { path = "../ff-db" }
regex = "1.10"
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
